--- a/ProAgil-App/src/app/eventos/eventos.component.html
+++ b/ProAgil-App/src/app/eventos/eventos.component.html
@@ -10,7 +10,8 @@
     <tr>
       <th>
         <button class="btn btn-outline-primary"
-          (click) = "alternarImagem()">Mostrar Imagem
+          (click) = "alternarImagem()">
+          <i class="{{mostrarImagem ? 'fa fa-eye-slash' : 'fa fa-eye' }} Imagem"></i>
         </button>
       </th>
       <th>ID</th>
@@ -33,9 +34,16 @@
       <td>{{evento.eventoId}}</td>
       <td>{{evento.tema}}</td>
       <td>{{evento.local}}</td>
-      <td>{{evento.dataEvento}}</td>
+      <td>{{evento.dataEvento | DateTimeFormatPipe}}</td>
       <td>{{evento.qtdPessoas}}</td>
-      <td>{{evento.lote | uppercase}}</td>
+      <td>
+        <div *ngIf="!evento.lotes.length" >
+          Não Informado
+        </div>
+        <div *ngIf="evento.lotes.length" >
+          {{evento.lotes[0].nome | uppercase}}
+        </div>
+      </td>
       <td>
         <button class="btn btn-success"></button>
         <button class="btn btn-danger"></button>
