--- a/ProAgil-App/src/app/eventos/eventos.component.html
+++ b/ProAgil-App/src/app/eventos/eventos.component.html
@@ -1,7 +1,7 @@
 <div class="form-inline">
   <div class="form-group mb-2">
     <label class="mr-2">Filtro: </label> <input type="text" class="form-control mr-2" placeholder="buscar"
-    [(ngModel)] = "filtroLista">
+      [(ngModel)]="filtroLista">
   </div>
 </div>
 <h3>Filtro: {{filtroLista}}</h3>
@@ -9,8 +9,7 @@
   <thead class="thead-light">
     <tr>
       <th>
-        <button class="btn btn-outline-primary"
-          (click) = "alternarImagem()">
+        <button class="btn btn-outline-primary" (click)="alternarImagem()">
           <i class="{{mostrarImagem ? 'fa fa-eye-slash' : 'fa fa-eye' }} Imagem"></i>
         </button>
       </th>
@@ -26,10 +25,8 @@
   <tbody *ngIf="eventos && eventos.length">
     <tr *ngFor="let evento of eventosFiltrados">
       <td>
-        <img *ngIf="mostrarImagem"
-          src="http://localhost:5000/img/{{evento.imagemURL}}" 
-          [style.width.px]= "imagemLargura"
-          [style.margin.px] = "imagemMargem">
+        <img *ngIf="mostrarImagem" src="http://localhost:5000/img/{{evento.imagemURL}}" [style.width.px]="imagemLargura"
+          [style.margin.px]="imagemMargem">
       </td>
       <td>{{evento.eventoId}}</td>
       <td>{{evento.tema}}</td>
@@ -37,16 +34,22 @@
       <td>{{evento.dataEvento | DateTimeFormatPipe}}</td>
       <td>{{evento.qtdPessoas}}</td>
       <td>
-        <div *ngIf="!evento.lotes.length" >
+        <div *ngIf="!evento.lotes.length">
           Não Informado
         </div>
-        <div *ngIf="evento.lotes.length" >
+        <div *ngIf="evento.lotes.length">
           {{evento.lotes[0].nome | uppercase}}
         </div>
       </td>
       <td>
-        <button class="btn btn-success"></button>
-        <button class="btn btn-danger"></button>
+        <div class="btn-group">
+          <button class="btn btn-sm btn-success" tooltip="Editar" (click)="openModal(template)">
+            <i class="fa fa-edit"></i>
+          </button>
+          <button class="btn btn-sm btn-danger" tooltip="Excluir">
+            <i class="fa fa-eraser"></i>
+          </button>
+        </div>
       </td>
     </tr>
   </tbody>
@@ -58,3 +61,16 @@
     </tr>
   </tfoot>
 </table>
+
+
+<ng-template #template>
+  <div class="modal-header">
+    <h4 class="modal-title pull-left">Modal</h4>
+    <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    this is a modal.
+  </div>
+</ng-template>
