--- a/ProAgil-App/src/app/eventos/eventos.component.html
+++ b/ProAgil-App/src/app/eventos/eventos.component.html
@@ -1,7 +1,7 @@
 <div class="form-inline">
   <div class="form-group mb-2">
     <label class="mr-2">Filtro: </label> <input type="text" class="form-control mr-2" placeholder="buscar"
-      [(ngModel)]="filtroLista">
+    [(ngModel)]="filtroLista">
   </div>
 </div>
 <h3>Filtro: {{filtroLista}}</h3>
@@ -26,7 +26,7 @@
     <tr *ngFor="let evento of eventosFiltrados">
       <td>
         <img *ngIf="mostrarImagem" src="http://localhost:5000/img/{{evento.imagemURL}}" [style.width.px]="imagemLargura"
-          [style.margin.px]="imagemMargem">
+        [style.margin.px]="imagemMargem">
       </td>
       <td>{{evento.eventoId}}</td>
       <td>{{evento.tema}}</td>
@@ -74,3 +74,63 @@
     this is a modal.
   </div>
 </ng-template>
+
+<form [formGroup]="registerForm">
+  <div class="form-row">
+    <div class="form-group col-md-12">
+      <label>Tema</label>
+      <input type="text" class="form-control "
+      [ngClass]="{'is-invalid' : registerForm.controls['tema'].errors
+        && ( registerForm.get('tema') && registerForm.controls['tema'].touched)}"
+       formControlName="tema">
+      <div *ngIf="registerForm.get('tema')?.hasError('required') && registerForm.get('tema')?.touched" class="invalid-feedback">tema é obrigatorio</div>
+      <div *ngIf="registerForm.get('tema')?.hasError('minlength') && registerForm.get('tema')?.touched" class="invalid-feedback">tema deve ter no minimo 4 caracteres</div>
+      <div *ngIf="registerForm.get('tema')?.hasError('maxlength') && registerForm.get('tema')?.touched" class="invalid-feedback">tema deve ter no maximo 50 caracteres</div>
+    </div>
+  </div>  
+  <div class="form-row">
+    <div class="form-group col-md-8">
+      <label>Local</label>
+      <input type="text" class="form-control is-invalid" formControlName="local">
+      <div class="invalid-feedback">local é obrigatorio</div>
+    </div>
+    <div class="form-group col-md-4">
+      <label>Data e Hora</label>
+      <input type="text" class="form-control is-invalid" formControlName="dataEvento">
+      <div class="invalid-feedback">Data e Hora é obrigatorio</div>
+    </div>
+  </div>  
+  <div class="form-row">
+    <div class="form-group col-md-3">
+      <label>Qtd Pessoas</label>
+      <input type="text" class="form-control is-invalid" formControlName="qtdPessoas">
+      <div class="invalid-feedback"> qtd de pessoas é obrigatorio</div>
+    </div>
+    <div class="form-group col-md-9">
+      <label>Imagem</label>
+      <input type="text" class="form-control is-invalid" formControlName="imagemURL">
+      <div class="invalid-feedback">imagem é obrigatorio</div>
+    </div>
+  </div>  
+  <div class="form-row">
+    <div class="form-group col-md-8">
+      <label>Telefone</label>
+      <input type="text" class="form-control is-invalid" formControlName="telefone">
+      <div class="invalid-feedback">telefone é obrigatorio</div>
+    </div>
+    <div class="form-group col-md-4">
+      <label>Email</label>
+      <input type="text" class="form-control is-invalid" formControlName="email">
+      <div class="invalid-feedback">email é obrigatorio</div>
+    </div>
+  </div> 
+</form>
+<br>
+<button class="btn btn-secondary" (click)="openModal(template)">
+  Fechar
+</button>
+<button class="btn btn-primary" (click)="salvarAlteracao()">
+  Salvar Alterações
+</button>
+<br>
+<br>
