--- a/ProAgil-App/src/app/eventos/eventos.component.html
+++ b/ProAgil-App/src/app/eventos/eventos.component.html
@@ -1,9 +1,21 @@
-<div class="form-inline">
-  <div class="form-group mb-2">
-    <label class="mr-2">Filtro: </label> <input type="text" class="form-control mr-2" placeholder="buscar"
-    [(ngModel)]="filtroLista">
+<div class="d-flex">
+  
+  <div class="form-inline mr-auto">
+    <div class="form-group mb-2">
+      <label class="mr-2">Filtro: </label> <input type="text" class="form-control mr-2" placeholder="buscar"
+      [(ngModel)]="filtroLista">
+    </div>
+  </div>'
+  <div>
+    
+    <button class="btn btn-outline-primary" (click)="openModal(template)">
+      <i class="fa fa-plus-circle"></i>&nbsp;
+      Novo Evento
+    </button>
   </div>
+  
 </div>
+
 <h3>Filtro: {{filtroLista}}</h3>
 <table class="table table-striped">
   <thead class="thead-light">
@@ -63,74 +75,97 @@
 </table>
 
 
-<ng-template #template>
-  <div class="modal-header">
-    <h4 class="modal-title pull-left">Modal</h4>
-    <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
-      <span aria-hidden="true">&times;</span>
-    </button>
+<div bsModal #template="bs-modal" class="modal fade" tabindex="-1"
+role="dialog" aria-labelledby="dialog-sizes-name1">
+<div class="modal-dialog modal-lg">
+  <div class="modal-content">
+    <div class="modal-header">
+      <h4 id="dialog-sizes-name1" class="modal-title pull-left">Large modal</h4>
+      <button type="button" class="close pull-right" (click)="template.hide()" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <div class="modal-body">
+      <form [formGroup]="registerForm">
+        <div class="form-row">
+          <div class="form-group col-md-12">
+            <label>Tema</label>
+            <input type="text" class="form-control "
+            [ngClass]="{'is-invalid' : registerForm.controls['tema'].errors
+            && ( registerForm.get('tema') && registerForm.controls['tema'].touched)}"
+            formControlName="tema">
+            <div *ngIf="registerForm.get('tema')?.hasError('required') && registerForm.get('tema')?.touched" class="invalid-feedback">tema é obrigatorio</div>
+            <div *ngIf="registerForm.get('tema')?.hasError('minlength') && registerForm.get('tema')?.touched" class="invalid-feedback">tema deve ter no minimo 4 caracteres</div>
+            <div *ngIf="registerForm.get('tema')?.hasError('maxlength') && registerForm.get('tema')?.touched" class="invalid-feedback">tema deve ter no maximo 50 caracteres</div>
+          </div>
+        </div>  
+        <div class="form-row">
+          <div class="form-group col-md-8">
+            <label>Local</label>
+            <input type="text" class="form-control" formControlName="local"
+            [ngClass]="{'is-invalid' : registerForm.controls['local'].errors
+            && ( registerForm.get('local') && registerForm.controls['local'].touched)}">
+            <div *ngIf="registerForm.get('local')?.hasError('required') && registerForm.get('local')?.touched" class="invalid-feedback">local é obrigatorio</div>
+          </div>
+          <div class="form-group col-md-4">
+            <label>Data e Hora</label>
+            <input type="text" class="form-control"
+            bsDatepicker formControlName="dataEvento"
+            [bsConfig]="{ dateInputFormat: 'DD/MM/YYYY HH:MM a'}"
+            [ngClass]="{'is-invalid' : registerForm.controls['dataEvento'].errors
+            && ( registerForm.get('dataEvento') && registerForm.controls['dataEvento'].touched)}">
+            <div *ngIf="registerForm.get('dataEvento')?.hasError('required') && registerForm.get('dataEvento')?.touched" class="invalid-feedback">Data e Hora é obrigatorio</div>
+          </div>
+        </div>  
+        <div class="form-row">
+          <div class="form-group col-md-3">
+            <label>Qtd Pessoas</label>
+            <input type="text" class="form-control" formControlName="qtdPessoas"
+            [ngClass]="{'is-invalid' : registerForm.controls['qtdPessoas'].errors
+            && ( registerForm.get('qtdPessoas') && registerForm.controls['qtdPessoas'].touched)}">
+            <div *ngIf="registerForm.get('qtdPessoas')?.hasError('required') && registerForm.get('qtdPessoas')?.touched" class="invalid-feedback"> qtd de pessoas é obrigatorio</div>
+            <div *ngIf="registerForm.get('qtdPessoas')?.hasError('max') && registerForm.get('qtdPessoas')?.touched" class="invalid-feedback"> qtd de pessoas deve ser menor que 120000</div>
+          </div>
+          <div class="form-group col-md-9">
+            <label>Imagem</label>
+            <input type="text" class="form-control" formControlName="imagemURL"
+            [ngClass]="{'is-invalid' : registerForm.controls['imagemURL'].errors
+            && ( registerForm.get('imagemURL') && registerForm.controls['imagemURL'].touched)}">
+            <div *ngIf="registerForm.get('imagemURL')?.hasError('required') && registerForm.get('imagemURL')?.touched" class="invalid-feedback">imagem é obrigatorio</div>
+          </div>
+        </div>  
+        <div class="form-row">
+          <div class="form-group col-md-8">
+            <label>Telefone</label>
+            <input type="text" class="form-control" formControlName="telefone"
+            [ngClass]="{'is-invalid' : registerForm.controls['telefone'].errors
+            && ( registerForm.get('telefone') && registerForm.controls['telefone'].touched)}">
+            <div *ngIf="registerForm.get('telefone')?.hasError('required') && registerForm.get('telefone')?.touched" class="invalid-feedback">telefone é obrigatorio</div>
+          </div>
+          <div class="form-group col-md-4">
+            <label>Email</label>
+            <input type="text" class="form-control" formControlName="email"
+            [ngClass]="{'is-invalid' : registerForm.controls['email'].errors
+            && ( registerForm.get('email') && registerForm.controls['email'].touched)}">
+            <div *ngIf="registerForm.get('email')?.hasError('required') && registerForm.get('email')?.touched" class="invalid-feedback">email é obrigatorio</div>
+            <div *ngIf="registerForm.get('email')?.hasError('email') && registerForm.get('email')?.touched" class="invalid-feedback">deve ser e-mail valido</div>
+          </div>
+        </div> 
+      </form>
+    </div>
+    <div class="modal-footer d-flex">
+      <button class="btn btn-secondary" (click)="template.hide()">
+        Fechar
+      </button>
+      <button class="btn btn-primary ml-auto" [disabled]="!registerForm.valid" (click)="salvarAlteracao()">
+        Salvar Alterações
+      </button>
+    </div>
   </div>
-  <div class="modal-body">
-    this is a modal.
-  </div>
-</ng-template>
+</div>
+</div>
 
-<form [formGroup]="registerForm">
-  <div class="form-row">
-    <div class="form-group col-md-12">
-      <label>Tema</label>
-      <input type="text" class="form-control "
-      [ngClass]="{'is-invalid' : registerForm.controls['tema'].errors
-        && ( registerForm.get('tema') && registerForm.controls['tema'].touched)}"
-       formControlName="tema">
-      <div *ngIf="registerForm.get('tema')?.hasError('required') && registerForm.get('tema')?.touched" class="invalid-feedback">tema é obrigatorio</div>
-      <div *ngIf="registerForm.get('tema')?.hasError('minlength') && registerForm.get('tema')?.touched" class="invalid-feedback">tema deve ter no minimo 4 caracteres</div>
-      <div *ngIf="registerForm.get('tema')?.hasError('maxlength') && registerForm.get('tema')?.touched" class="invalid-feedback">tema deve ter no maximo 50 caracteres</div>
-    </div>
-  </div>  
-  <div class="form-row">
-    <div class="form-group col-md-8">
-      <label>Local</label>
-      <input type="text" class="form-control is-invalid" formControlName="local">
-      <div class="invalid-feedback">local é obrigatorio</div>
-    </div>
-    <div class="form-group col-md-4">
-      <label>Data e Hora</label>
-      <input type="text" class="form-control is-invalid" formControlName="dataEvento">
-      <div class="invalid-feedback">Data e Hora é obrigatorio</div>
-    </div>
-  </div>  
-  <div class="form-row">
-    <div class="form-group col-md-3">
-      <label>Qtd Pessoas</label>
-      <input type="text" class="form-control is-invalid" formControlName="qtdPessoas">
-      <div class="invalid-feedback"> qtd de pessoas é obrigatorio</div>
-    </div>
-    <div class="form-group col-md-9">
-      <label>Imagem</label>
-      <input type="text" class="form-control is-invalid" formControlName="imagemURL">
-      <div class="invalid-feedback">imagem é obrigatorio</div>
-    </div>
-  </div>  
-  <div class="form-row">
-    <div class="form-group col-md-8">
-      <label>Telefone</label>
-      <input type="text" class="form-control is-invalid" formControlName="telefone">
-      <div class="invalid-feedback">telefone é obrigatorio</div>
-    </div>
-    <div class="form-group col-md-4">
-      <label>Email</label>
-      <input type="text" class="form-control is-invalid" formControlName="email">
-      <div class="invalid-feedback">email é obrigatorio</div>
-    </div>
-  </div> 
-</form>
-<br>
-<button class="btn btn-secondary" (click)="openModal(template)">
-  Fechar
-</button>
-<button class="btn btn-primary" (click)="salvarAlteracao()">
-  Salvar Alterações
-</button>
 <br>
 <br>
+<p>Form Value: {{registerForm.value | json}}</p>
+<p>Form Status: {{registerForm.status | json}}</p>
