rotas,alertas e @input

--- a/ProAgil-App/src/app/eventos/eventos.component.html
+++ b/ProAgil-App/src/app/eventos/eventos.component.html
@@ -1,3 +1,4 @@
+<app-titulo [titulo]="titulo"></app-titulo>
 <div class="d-flex">
   
   <div class="form-inline mr-auto">
@@ -5,7 +6,7 @@
       <label class="mr-2">Filtro: </label> <input type="text" class="form-control mr-2" placeholder="buscar"
       [(ngModel)]="filtroLista">
     </div>
-  </div>'
+  </div>
   <div>
     
     <button class="btn btn-outline-primary" (click)="novoEvento(template)">
