--- a/ProAgil-App/src/app/eventos/eventos.component.html
+++ b/ProAgil-App/src/app/eventos/eventos.component.html
@@ -38,7 +38,7 @@
   <tbody *ngIf="eventos && eventos.length">
     <tr *ngFor="let evento of eventosFiltrados">
       <td>
-        <img *ngIf="mostrarImagem" src="http://localhost:5000/img/{{evento.imagemURL}}" [style.width.px]="imagemLargura"
+        <img *ngIf="mostrarImagem" src="http://localhost:5000/Resources/Images/{{evento.imagemURL}}?_ts={{dataAtual}}" [style.width.px]="imagemLargura"
         [style.margin.px]="imagemMargem">
       </td>
       <td>{{evento.eventoId}}</td>
@@ -130,9 +130,18 @@ role="dialog" aria-labelledby="dialog-sizes-name1">
           </div>
           <div class="form-group col-md-9">
             <label>Imagem</label>
-            <input type="text" class="form-control" formControlName="imagemURL"
+            <table>
+              <tr>
+                <td>
+                  <button class="btn btn-success"(click)="file.click()">Enviar Imagem</button>
+            <input type="file" #file class="form-control" formControlName="imagemURL"
             [ngClass]="{'is-invalid' : registerForm.controls['imagemURL'].errors
-            && ( registerForm.get('imagemURL') && registerForm.controls['imagemURL'].touched)}">
+            && ( registerForm.get('imagemURL') && registerForm.controls['imagemURL'].touched)}" (change)="onFileChange($event)"
+            style="display: none;" >
+                </td>
+              </tr>
+            </table>
+            
             <div *ngIf="registerForm.get('imagemURL')?.hasError('required') && registerForm.get('imagemURL')?.touched" class="invalid-feedback">imagem é obrigatorio</div>
           </div>
         </div>  
