--- a/ProAgil-App/src/app/nav/nav.component.html
+++ b/ProAgil-App/src/app/nav/nav.component.html
@@ -5,7 +5,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+    <div *ngIf="!loggedIn()" class="collapse navbar-collapse" id="navbarsExampleDefault">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item " routerLinkActive="active">
           <a class="nav-link" routerLink="eventos">Eventos</a>
@@ -17,26 +17,28 @@
           <a class="nav-link" routerLink="contatos">Contatos</a>
         </li>
       </ul>
-      <ul class="navbar-nav">
+
+    </div>
+    <div class="">
+      <ul *ngIf="!loggedIn()" class="navbar-nav">
         <li class="nav-item dropdown" dropdown>
-          <a dropdownToggle class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
-            aria-haspopup="true" aria-expanded="false">
-            Vinícius
+          <a dropdownToggle class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false" style="cursor: pointer;">
+            {{authService.decodeToken?.unique_name}}
           </a>
           <div *dropdownMenu class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="#">
+            <a class="dropdown-item" >
               Perfil
             </a>
             <div role="separator" class="divider"></div>
-            <a class="dropdown-item" href="#">
+            <a class="dropdown-item" (click)="logout()" style="cursor: pointer;">
               Sair
             </a>
           </div>
         </li>
       </ul>
-
+      <button *ngIf="loggedIn()" class="btn btn-success" (click)="entrar()">Entrar</button>
     </div>
-
 
 
   </div>
